address section alignment corrected

--- a/style.css
+++ b/style.css
@@ -465,3 +465,9 @@ textarea {
     flex-direction: column;
     justify-content: center;
 }
+
+.contact__address >div{
+    margin-top: 4rem;
+    display: flex;
+    align-items: center;
+}
